--- a/quotation.html
+++ b/quotation.html
@@ -62,24 +62,25 @@ VAT REG. TIN: 000-050-365-000
 
       <!-- Quotation Table -->
       <div class="quotation-table">
-        <h3 class = "title">
-          Dear Ma’am/Sir: 
-        </h3>
-        <p> We are pleased to present you our best offer for your
-          consideration and approval, subject to the terms and conditions contained herein:
+        <h3 class="title">Dear Ma’am/Sir:</h3>
+        <p>
+          We are pleased to present you our best offer for your consideration
+          and approval, subject to the terms and conditions contained herein:
         </p>
         <span> </span>
         <table>
-            <colgroup>
-                <col style="width: 5%;">
-                <col style="width: 20%;">
-                <col style="width: 20%;">
-                <col style="width: 5%;">
-                <col style="width: 5%;">
-                <col style="width: 12%;">
-                <col style="width: 15%;"> <!-- Unit Cost -->
-                <col style="width: 15%;"> <!-- Total Cost -->
-              </colgroup>
+          <colgroup>
+            <col style="width: 5%" />
+            <col style="width: 20%" />
+            <col style="width: 20%" />
+            <col style="width: 5%" />
+            <col style="width: 5%" />
+            <col style="width: 12%" />
+            <col style="width: 15%" />
+            <!-- Unit Cost -->
+            <col style="width: 15%" />
+            <!-- Total Cost -->
+          </colgroup>
           <thead>
             <tr>
               <th>No.</th>
@@ -95,7 +96,10 @@ VAT REG. TIN: 000-050-365-000
           <tbody>
             <tr>
               <td>1</td>
-              <td>ACCOUNTING & FINANCE, ADMINISTRATIVE & HR, ENGINEERING & OPERATION</td>
+              <td>
+                ACCOUNTING & FINANCE, ADMINISTRATIVE & HR, ENGINEERING &
+                OPERATION
+              </td>
               <td>Installation of 1.0hp Wall Mounted Unit 1st 10ft</td>
               <td>1</td>
               <td>Unit</td>
@@ -104,54 +108,185 @@ VAT REG. TIN: 000-050-365-000
               <td>Free Installation</td>
             </tr>
             <tr>
-                <td>2</td>
-                <td>ACCOUNTING & FINANCE, ADMINISTRATIVE & HR, ENGINEERING & OPERATION</td>
-                <td>Installation of 1.0hp Wall Mounted Unit 1st 10ft</td>
-                <td>1</td>
-                <td>Unit</td>
-                <td>₱8,000.00</td>
-                <td>Free Installation</td>
-                <td>Free Installation</td>
-              </tr>
+              <td>2</td>
+              <td>
+                ACCOUNTING & FINANCE, ADMINISTRATIVE & HR, ENGINEERING &
+                OPERATION
+              </td>
+              <td>Installation of 1.0hp Wall Mounted Unit 1st 10ft</td>
+              <td>1</td>
+              <td>Unit</td>
+              <td>₱8,000.00</td>
+              <td>Free Installation</td>
+              <td>Free Installation</td>
+            </tr>
             <!-- Add more rows as needed -->
             <tr class="total">
-                <td colspan="7"><strong>Total:</strong></td>
-                <td><strong>₱123,350.00</strong></td>
-              </tr>
+              <td colspan="7"><strong>Total:</strong></td>
+              <td><strong>₱123,350.00</strong></td>
+            </tr>
             <tr class="discounted">
-                <td colspan="7"><strong>Discounted:</strong></td>
-                <td><strong>₱3000.00</strong></td>
+              <td colspan="7"><strong>Discounted:</strong></td>
+              <td><strong>₱3000.00</strong></td>
             </tr>
             <tr class="grand-total">
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td class="total-label"><strong>Grand Total</strong></td>
-                <td class="total-amount"><strong>₱120,350.00</strong></td>
-              </tr>
-              
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td class="total-label"><strong>Grand Total</strong></td>
+              <td class="total-amount"><strong>₱ 120,350.00</strong></td>
+            </tr>
           </tbody>
         </table>
       </div>
-      <hr />
+      <div class="linebreak">
+        <span class="end-text">End of Quotation</span>
+      </div>
       <!-- Terms & Conditions Section -->
       <div class="terms">
         <h3>Terms and Conditions</h3>
-        <p>
-          Payment is due within 30 days of receiving the quotation. Prices are
-          subject to change based on market conditions. This quotation is valid
-          for 60 days from the date of issuance.
-        </p>
+        <table>
+          <col style="width: 40%" />
+          <col style="width: 60%" />
+          <thead>
+            <tr class="conditions">
+              <th>Sections:</th>
+              <th>Details:</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Remarks:</td>
+              <td>
+                <ul>
+                  <li>Items on order basis are not cancellable.</li>
+                  <li>Admin cost shall apply for the cancelled project.</li>
+                  <li>
+                    Please confirm your purchase by signing the conforme portion
+                    below for our stock ordering.
+                  </li>
+                  <li>
+                    Any changes during installation are subject to a separate
+                    quotation.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>Payment:</td>
+              <td>
+                <ul>
+                  <li>
+                    70% down payment prior on the 1st day of installation and
+                    30% upon completion
+                  </li>
+                  <li>Cash / Check payment payable to ABENSON VENTURES INC.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>Price Validity:</td>
+              <td>
+                <ul>
+                  <li>Cash / Check payment payable to ABENSON VENTURES INC</li>
+                  <li>
+                    Lapse quotation will be subject for re-sur ey/new quotation.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>Warranty:</td>
+              <td>
+                <ul>
+                  <li>One (1) year from the date of unit purchased.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>Note:</td>
+              <td>
+                <ul>
+                  <li>
+                    * Any Additional Works During and After Installation is
+                    Subject for New Quotation
+                  </li>
+                  <li>* Power Supply is c/o Client.</li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>Installation inclusion and scope of works:</td>
+              <td>
+                <ul>
+                  <li>
+                    Installation of FCU and ACCU to designated and approved
+                    locationr
+                  </li>
+                  <li>
+                    Supply and lay out of new refrigerant copper piping with
+                    rubber insulation
+                  </li>
+                  <li>
+                    Supply and lay out of communication control wire with
+                    electrical pipe conduit
+                  </li>
+                  <li>
+                    Supply and installation of consumable materials such as
+                    nuts, clamps, bolts, tapes, drain pipes to complete
+                    installation works
+                  </li>
+                  <li>
+                    Flushing and Leak testing of entire unit using nitrogen gasr
+                  </li>
+                  <li>
+                    Vacuuming of entire system using acuum pump to free the
+                    system from moisture and air
+                  </li>
+                  <li>
+                    Charging of freon if needed, test run, obser ation and
+                    commissioning of unit
+                  </li>
+                  <li>
+                    Start up checklist documentation of unit to be submitted to
+                    supplier for warranty purposes.
+                  </li>
+                </ul>
+              </td>
+            </tr>
+            <tr>
+              <td>Installation and Exclusion:</td>
+              <td>
+                <ul>
+                  <li>
+                    Restoration of civil works and painting of walls, carpentry
+                    and masonry works not includedr
+                  </li>
+                  <li>Glass cutting are not included.</li>
+                  <li>
+                    Architectural, civil works, necessary go ernment permits and
+                    licenses
+                  </li>
+                  <li>Electrical works (power supply)</li>
+                </ul>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div class = "footer">
+          <p> If you have any questions, please feel free to contact us:</p>
+          <p> <img src = "phone-80.png" style="width: 2%; height: auto;"> 0998 852 3873 / 0998 587 7186 / 0998 987 0402 </p>
+          <p> <img src = "phone-80.png" style="width: 2%; height: auto;"> airpro.quotation@gmail.com</p>
+          <p> Thank you and we hope to receive your valued order soon.</p>
+        </div>
       </div>
 
-      <!-- Footer Section -->
-      <div class="footer">
-        <p>Thank you for your business!</p>
-        <p>Company Name | www.companywebsite.com</p>
-      </div>
+
+    
+
     </div>
   </body>
 </html>
