--- a/quotation.html
+++ b/quotation.html
@@ -276,16 +276,51 @@ VAT REG. TIN: 000-050-365-000
             </tr>
           </tbody>
         </table>
-        <div class = "footer">
-          <p> If you have any questions, please feel free to contact us:</p>
-          <p> <img src = "phone-80.png" style="width: 2%; height: auto;"> 0998 852 3873 / 0998 587 7186 / 0998 987 0402 </p>
-          <p> <img src = "phone-80.png" style="width: 2%; height: auto;"> airpro.quotation@gmail.com</p>
-          <p> Thank you and we hope to receive your valued order soon.</p>
+        <div class="footer">
+          <p>If you have any questions, please feel free to contact us:</p>
+          <div class="contact-info">
+            <p><img class="phone-icon" src="phone-80.png" alt="phone icon"> 0998
+              852 3873 / 0998 587
+              7186 / 0998 987 0402</p>
+            <p style = "color: blue;"><img class="phone-icon" src="mail-255.png" alt="mail icon">
+              airpro.quotation@gmail.com</p>
+          </div>
+          <p>Thank you and we hope to receive your valued order soon.</p>
+
+          <div class="signature-section-container">
+            <div class="signature-section">
+              <h3> Prepared By: </h3>
+              <p> John Doe </p>
+              <p> Admin Staff </p>
+            </div>
+            <div class="signature-section">
+              <h3> Noted By: </h3>
+              <p> Jaylyn Machon </p>
+              <p> Head </p>
+            </div>
+            <div class="signature-space-conforme">
+              <div class="conforme">
+                <h3><strong>Conforme:</strong></h3>
+
+                <input type="text" name="signature" class="signature-input">
+                <p>Customer Signature Over Printed Name:</p>
+                <div class="customer-signature-line-input">
+                  <p class="customer-signature-line"> Date: <input type="text"
+                      name="date"> </p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="privacy">
+            <p>By Signing/Acknowledging this Form, I Agree that Abenson may
+              Collect, Use and disclose My Personal Data which will be used for
+              the Purpose of Processing My Transaction and Managing My Accounts,
+              in Accordance with the Data Privacy Act of 2012. I hereby confirm
+              that all information I have provided are true and correct.</p>
+          </div>
         </div>
       </div>
-
-
-    
 
     </div>
   </body>
