--- a/quotation.html
+++ b/quotation.html
@@ -10,6 +10,7 @@
     <div class="a4-page">
       <!-- Header Section with Logo and Company Info -->
       <div class="header">
+ 
         <div class="company-info-container">
           <span class="vl"> </span>
           <div class="company-info">
@@ -17,6 +18,8 @@
             <p>VAT REG. TIN: 000-050-365-000</p>
             <p>#18 EVANGILISTA ST., SANTOLAN, PASIG CITY</p>
           </div>
+
+          
           <!-- BY: Affiliated Electronics Service Corp
 VAT REG. TIN: 000-050-365-000
 #18 Evanglista St., Santolan, Pasig City -->
@@ -24,6 +27,7 @@ VAT REG. TIN: 000-050-365-000
         <div class="logo">
           <img src="Aserco logo.png" alt="Company Logo" width="150px" />
         </div>
+ 
       </div>
 
       <!-- Quotation Information -->
@@ -93,8 +97,8 @@ VAT REG. TIN: 000-050-365-000
               <th>Total Cost</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
+          <tbody class="table">
+            <tr class = "row-1">
               <td>1</td>
               <td>
                 ACCOUNTING & FINANCE, ADMINISTRATIVE & HR, ENGINEERING &
@@ -107,7 +111,7 @@ VAT REG. TIN: 000-050-365-000
               <td>Free Installation</td>
               <td>Free Installation</td>
             </tr>
-            <tr>
+            <tr class = "row-1">
               <td>2</td>
               <td>
                 ACCOUNTING & FINANCE, ADMINISTRATIVE & HR, ENGINEERING &
@@ -120,7 +124,8 @@ VAT REG. TIN: 000-050-365-000
               <td>Free Installation</td>
               <td>Free Installation</td>
             </tr>
-            <!-- Add more rows as needed -->
+         
+          <!-- Add more rows as needed -->
             <tr class="total">
               <td colspan="7"><strong>Total:</strong></td>
               <td><strong>₱123,350.00</strong></td>
@@ -157,7 +162,7 @@ VAT REG. TIN: 000-050-365-000
               <th>Details:</th>
             </tr>
           </thead>
-          <tbody>
+          <tbody class="remarks">
             <tr>
               <td>Remarks:</td>
               <td>
@@ -282,7 +287,8 @@ VAT REG. TIN: 000-050-365-000
             <p><img class="phone-icon" src="phone-80.png" alt="phone icon"> 0998
               852 3873 / 0998 587
               7186 / 0998 987 0402</p>
-            <p style = "color: blue;"><img class="phone-icon" src="mail-255.png" alt="mail icon">
+            <p style="color: blue;"><img class="phone-icon" src="mail-255.png"
+                alt="mail icon">
               airpro.quotation@gmail.com</p>
           </div>
           <p>Thank you and we hope to receive your valued order soon.</p>
