--- a/quotation.html
+++ b/quotation.html
@@ -9,6 +9,11 @@
   <body>
     <div class="a4-page">
       <!-- Header Section with Logo and Company Info -->
+       
+    <div class="wave-icon">
+      <img src="smile-serve-s-icon.png" alt="Wave Icon">
+    </div>
+    
       <div class="header">
  
         <div class="company-info-container">
