--- a/quotation.html
+++ b/quotation.html
@@ -30,7 +30,8 @@ VAT REG. TIN: 000-050-365-000
 #18 Evanglista St., Santolan, Pasig City -->
         </div>
         <div class="logo">
-          <img src="Aserco logo.png" alt="Company Logo" width="150px" />
+          <img src="viber_image_2024-10-21_09-29-30-778.png" alt="Company Logo" />
+          <p> Affiliated Electronics Service Corporation </p>
         </div>
  
       </div>
